# python-simple

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml  pyproject.toml.exmple
src/: main.py  settings.py
