[project]
name = "pydantic-ai-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "psycopg>=3.2.9",
    "pydantic>=2.11.4",
    "pydantic-ai[logfire]>=0.2.0",
    "pydantic-settings>=2.9.1",
]


[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []
exclude = [
    ".git",
    ".venv",
    "__pycache__",
]


[tool.ruff.isort]
known-first-party = ["src"]

[tool.pyright]
typeCheckingMode = "basic"
reportMissingImports = true
pythonVersion = "3.12"
pythonPlatform = "Linux"
include = ["src"]
ignore = ["**/typings"]
exclude = [
    ".*",
    "__*",
    "**/typings",
]
reportMissingTypeStubs = false